--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="txv_nome_completo">Nome Completo</string>
     <string name="txv_email">E-mail</string>
     <string name="txv_confirmacao_senha">Confirmação de Senha</string>
+    <string name="txv_inicio">INÍCIO</string>
+    <string name="btn_registrar_ponto">REGISTRAR PONTO</string>
+    <string name="btn_consulta_ponto">CONSULTA DE PONTO</string>
+    <string name="btn_cadastro_cargo">CADASTRO DE CARGO</string>
 </resources>
